--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
+@import url('badges.css');
 @import url('buttons.css');
 @import url('cards.css');
 @import url('dashboard.css');
