--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/Dashboard.razor
@@ -7,16 +7,20 @@
 <div class="page-container">
     <div class="dashboard-container">
         <div class="row align-items-stretch">
-            <div class="col-lg-4 mb-4">
+            <div class="col-lg-8 mb-4">
                 <UpcomingRoundsTile />
             </div>
 
             <div class="col-lg-4 mb-4">
                 <LeaderboardsTile />
             </div>
+            
+            <div class="col-lg-6 mb-4">
+                <MyLeaguesTile /> 
+            </div>
 
-            <div class="col-lg-4 mb-4">
-                <PublicLeaguesTile />
+            <div class="col-lg-6 mb-4">
+                <AvailableLeaguesTile />
             </div>
         </div>
     </div>
