--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/dashboard.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/dashboard.css
@@ -91,6 +91,17 @@
         background-color: var(--pl-purple-dark);
     }
 
+.league-price {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: var(--pl-green);
+}
+
+.league-details {
+    font-size: 0.85em;
+    color: var(--light-text);
+}
+
 /* Responsive adjustments for mobile */
 @media (max-width: 992px) {
     .dashboard-container {
