--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/List.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/List.razor
@@ -1,5 +1,7 @@
 ﻿@page "/leagues"
 
+@attribute [Authorize(Roles = RoleNames.Administrator)]
+
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JsRuntime
