--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
@@ -26,6 +26,7 @@
                                     <li><NavLink class="dropdown-item" href="/leagues">Manage Leagues</NavLink></li>
                                     <li><NavLink class="dropdown-item" href="/admin/seasons">Manage Seasons</NavLink></li>
                                     <li><NavLink class="dropdown-item" href="/admin/teams">Manage Teams</NavLink></li>
+                                    <li><NavLink class="dropdown-item" href="/admin/users">Manage Users</NavLink></li>
                                 </ul>
                             </li>
                         }
@@ -72,6 +73,7 @@
                                 <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/leagues">Manage Leagues</NavLink></li>
                                 <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/seasons">Manage Seasons</NavLink></li>
                                 <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/teams">Manage Teams</NavLink></li>
+                                <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/users">Manage Users</NavLink></li>
                             }
 
                             <li class="nav-item no-hover"><hr class="text-white"/></li>
