--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/forms.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/forms.css
@@ -33,6 +33,25 @@
         background-color: white;
     }
 
+.swal2-select {
+    background-color: white !important;
+    color: var(--pl-purple) !important; 
+    border-radius: var(--bs-border-radius);
+    padding: 0.5rem;
+}
+
+.swal2-radio-container {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 1rem;
+}
+
+    .swal2-radio-container label {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
 
 /* Validation */
 .message-box-solid {
